fix about us align text

--- a/src/components/main-page/about-us-card/about-us-card.scss
+++ b/src/components/main-page/about-us-card/about-us-card.scss
@@ -2,6 +2,10 @@
 
 .about-us-card {
     background-color: rgb(12, 12, 12);
+
+    .info-box {
+        text-align: left !important;
+    }
 }
 
 
